methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot: error: not enough arguments for method growFlowers: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	    growFlowers();
                       ^FlowerPot:2: error: not found: value setCoueurBrosse
  setCoueurBrosse(c)
  ^